# ros2_projects

./: LICENSE  README.md
install/logs_test/share/logs_test/: package.bash  (+6 more)
src/actions_quiz/: CMakeLists.txt
src/actions_quiz/src/: actions_quiz_client.cpp  actions_quiz_server.cpp
src/actions_quiz_msg/: CMakeLists.txt
src/client_pkg/: CMakeLists.txt
src/client_pkg/src/: stop_client.cpp
src/custom_interfaces/: CMakeLists.txt  package.xml
src/executors_exercises_pkg/: CMakeLists.txt
src/exercise42_pkg/: CMakeLists.txt
src/exercise42_pkg/src/: exercise42.cpp
src/logs_test/: CMakeLists.txt  package.xml
src/logs_test/launch/: log_demo.launch.py
src/logs_test/src/: logger_example.cpp
src/movement_pkg/: CMakeLists.txt
src/movement_pkg/src/: movement_server.cpp
src/my_action_client/: CMakeLists.txt  package.xml
src/my_action_client/src/: action_client.cpp
src/my_action_server/: CMakeLists.txt
src/my_action_server/src/: action_server.cpp
src/my_package/: CMakeLists.txt
src/my_package/launch/: my_package_launch_file.launch.py
src/my_package/src/: simple.cpp
src/services_quiz/: CMakeLists.txt  package.xml
src/services_quiz/launch/: services_quiz_client.launch.py  services_quiz_server.launch.py
src/services_quiz/src/: service_client.cpp  service_server.cpp
src/services_quiz_srv/: CMakeLists.txt
src/topic_publisher_pkg/: CMakeLists.txt  package.xml
src/topic_publisher_pkg/src/: move_robot.cpp  publish_age.cpp
src/topic_subscriber_pkg/: CMakeLists.txt  package.xml
src/topic_subscriber_pkg/launch/: odom_topic_subscriber.launch.py
src/topic_subscriber_pkg/src/: sub_odom.cpp
src/topics_quiz/: CMakeLists.txt  package.xml
src/topics_quiz/src/: collision_avoidance.cpp
(+69 files in other folders)
